--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,15 +1,29 @@
 // TYPOGRAPHY 
 // font-family: 'Catamaran', sans-serif;
 // font-family: 'Lato', sans-serif;
-
 .title {
-   font-family: 'Catamaran', sans-serif;
+   font-family: $font-main;
    font-size: 3.2rem; 
+   text-align: center;
 }
 .txt-uppercase {
    text-transform: uppercase;
 }
+.subtitle {
+   font-family: $font-main;
+   font-size: 2.5rem;
+}
+// buttons
 .txt-button {
-   letter-spacing: 2px;
-   color: $font-dark;
+   width: 125px;
+   border-radius: 1.6rem;
+   border: solid $font-dark 1px;
+   background: transparent;
+   padding: 3px;
+   a {
+      color:$font-dark;
+      font-size: 2rem;
+      font-weight: 700;
+      letter-spacing: 2px;
+   }
 }
