styled up to the gallery

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -23,7 +23,7 @@ header {
       }
    }
    .hero {
-      width: 65%;
+      // width: 65%;
       height: 100vh;
       position: relative;
       .hero__content {
