--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -5,6 +5,7 @@
    font-family: $font-main;
    font-size: 3.2rem; 
    text-align: center;
+   font-weight: 700;
 }
 .txt-uppercase {
    text-transform: uppercase;
@@ -12,6 +13,10 @@
 .subtitle {
    font-family: $font-main;
    font-size: 2.5rem;
+   font-weight: 700;
+}
+.font-accent {
+   color: $font-accent;
 }
 // buttons
 .txt-button {
