--- a/styles/partials/_utils.scss
+++ b/styles/partials/_utils.scss
@@ -12,6 +12,8 @@
    $bg-lightest: #fff;
    $bg-light: #f5f3f3;
    $bg-medium: #efefef;
+   $bg-dark: #606060;
+   $bg-darker: #2a2a2a;
    // accents
    $bg-accent1: #bec884; 
    $bg-accent2: #f2b094;
@@ -20,6 +22,7 @@
    $font-dark: #2a2a2a;
    $font-accent: #285d64;
    $font-light: #efefef;
+   $font-lightest: #fff;
 
 // =====================MIXINS===================
 
