--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,6 +8,9 @@
 @import "partials/testimonials";
 @import "partials/sample";
 @import "partials/clients";
+@import "partials/news";
+@import "partials/questions";
+@import "partials/gallery";
 @import "partials/footer";
 
 
