--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -4,47 +4,86 @@
    display:flex;
    justify-content: space-between;
    align-items: flex-start;
+   padding: 5rem 0;
+   @include position(relative, 0, 0, 0, 0);
    .contact, .about, .instagram {
       margin: 0 20px;
    }
    .contact {
       width: 33.33%;
-      
-      // background: pink;
-
+      font-family: $font-description;
+      .contact__content {
+         .contact__content__text {
+            padding: 1rem; 
+            .far, .fas {
+               padding-right: 5px;
+            }
+         }
+      }
+      .formEmail {
+         width: 100%;
+         border: none;
+         border: solid 1px black;
+         display: flex;
+         align-items: center;
+         // justify-content: space-between;
+         position:relative;
+         // border-top: solid 1px black;
+         // border-bottom: solid 1px black;
+         .formEmail__placeholder {
+           border: none;
+           width: 90%;
+           padding: 1rem 2rem;
+         }
+         .formEmail__button {
+            border: none;
+            background: transparent;
+            width: 10%;
+            position: absolute;
+            right: 10px;
+         }
+      }
    }
    .about {
       width: 33.33%;
-      // background: blue;
-
    }
    .instagram {
       width: 33.33%;
-      // background: green;
       .instagramWrapper {
-         // width: 33.33%;
          .instaGallery {
             display: flex;
             justify-content: row;
-            // flex-direction: row;
             flex-wrap: wrap;
-            .instaGallery__item__img{
+            .instaGallery__item__img {
                margin: 2px;
                width: calc((100% / 4) - 6px);
             }
          }
       }
-
    }
-   .social {
-      width: 10%;
-      .social__list {
-         .social__list__item {
+}
+.social {
+   width: 10%;
+   .social__list {
+      display: block;
+      background: green;
+      @include position(absolute, 0, 10px, 0, 0);
+      .social__list__item {
+         display: block;
 
-         }
       }
    }
-   .ftrnav {
-      background-color: $bg-darker;
+}
+.ftrnav {
+   .ftrnav__list {
+      display: flex;
+      justify-content: space-around;
+      a {
+         
+      }
    }
+}
+.copyright {
+   background: black;
+   color: white;
 }
