--- a/styles/partials/_testimonials.scss
+++ b/styles/partials/_testimonials.scss
@@ -3,17 +3,27 @@
    background: $bg-lightest;
    text-align: center;
    padding: 5rem;
+   @include breakPoint(break3) {
+      padding: 5rem 0;
+   }
    .tml {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 5rem 0;
+      @include breakPoint(break3) {
+         flex-direction: column;
+      } 
       .tml__image {
          flex: 1 0 40%;
       }
       .tml__content {
          text-align: left;
          padding-left: 2rem;
+         @include breakPoint(break3) {
+            width: 100%;
+            padding: 0;
+         }
          .tml__content--content {
             @include fontSize(16);
          }
