--- a/styles/partials/_gallery.scss
+++ b/styles/partials/_gallery.scss
@@ -5,12 +5,20 @@
    .gallery__wrapper {
       display: flex;
       justify-content: space-between;
+      @include breakPoint(break1) {
+            flex-direction: column;
+      }
       .gallery__nav {
          background-color: $bg-dark;
          color: $font-lightest;
          width: 33.33%;
          display: flex;
          flex-direction: column;
+         @include breakPoint(break1) {
+            flex-direction: column;
+            width: 100%;
+            margin-bottom: 5rem;
+         }
          .gallery__nav__title {
             padding: 5rem 0 3rem 0; 
          }
@@ -31,6 +39,9 @@
          display: flex;
          flex-wrap: wrap;
          width: 66.66%;
+         @include breakPoint(break1) {
+            width: 100%;
+         }
          .gallery__items__quad {
             @include position(relative, 0, 0, 0, 0);
             width: calc(50% - 20px);
