--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -4,26 +4,52 @@ header {
    height: 100vh;
    background: url(../assets/image-1.jpeg) fixed no-repeat bottom;
    background-size: cover;
+   @include breakPoint(break3) {
+      background: linear-gradient(rgba(255,255,255,0.3)), url(../assets/image-1.jpeg);
+      background-size: cover;
+   }
+   @include breakPoint(break6) {
+      background: linear-gradient(rgba(255,255,255,0.7)), url(../assets/image-1.jpeg);
+      background-size: cover;
+   }
    .header__nav {
       padding: 2rem 0;
       .header__navWrapper {
          display: flex;
          justify-content: space-between;
          align-items: center;
+         @include breakPoint(break1) {
+            flex-direction: column;
+         }
          .header__list {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            @include breakPoint(break5) {
+               flex-direction: column;
+               justify-content: center;
+               align-items: center;
+               width: 100%;
+               background: linear-gradient(rgba(255,255,255,0.8));
+            }
             .header__list__item {
                padding: 1.5rem;
                font-size: 1.5rem;
                font-weight: 600;
+               &:first-child {
+                  display: none;
+                  @include breakPoint(break5) {
+                     display: block;
+                  }
+               }
+               &:hover {
+                  color: $bg-accent2;
+               }
             }
          }
       }
    }
    .hero {
-      // width: 65%;
       height: 100vh;
       position: relative;
       .hero__content {
@@ -31,23 +57,43 @@ header {
          right: 0;
          top: 25%;
          text-align: left;
+         @include breakPoint(break1) {
+            top: 20%;
+            right: -10%;
+         }
+         @include breakPoint(break2) {
+            top: 10%;
+         }
+         @include breakPoint(break3) {
+            top: 30%;
+            left: 50%;
+         }
+         @include breakPoint(break5) {
+            background: linear-gradient(rgba(255,255,255,0.8));
+            height: 225px;
+            width: 100%;
+            padding: 5rem;
+            position: static;
+            text-align: center;
+         }
+         @include breakPoint(break6) {
+            background: none;
+            color: $font-dark;
+                           width: 100%;
+
+         }
          .hero__title {
-         font-size: 6.5rem;
-         line-height: 1;
+            font-size: 6.5rem;
+            line-height: 1;
+            @include breakPoint(break6) {
+               font-size: 4.5rem;
+               color: $font-accent;
+               transform: translateX(-25%);
+            }
          }
          .hero__text {
             font-size: 1.6rem;
             font-weight: 700;
-         }
-         .hero__button {
-            width: 40%;
-            border-radius: 1.6rem;
-            border: solid $font-dark 1px;
-            background: transparent;
-            padding: 3px;
-            a {
-               color:$font-dark;
-            }
          }
       }
    }
