--- a/styles/partials/_services.scss
+++ b/styles/partials/_services.scss
@@ -7,9 +7,15 @@
       display: flex;
       justify-content: space-between;
       padding: 2rem 1rem;
+      @include breakPoint(break2) {
+         flex-direction: column;
+         width: 50%;
+      }
+      @include breakPoint(break5) {
+         width: 100%;
+      }
       .services__list__item {
          padding: 10px;
-         // margin: 0 1rem;
          .fas {
             font-size: 5rem;
          }
