--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -31,4 +31,10 @@
       font-weight: 700;
       letter-spacing: 2px;
    }
+   &:hover {
+      background-color: $font-accent;
+      a {
+         color: $font-lightest;
+      }
+   }
 }
