--- a/styles/partials/_utils.scss
+++ b/styles/partials/_utils.scss
@@ -53,3 +53,27 @@
    justify-content: $justify;
    align-items: $align-items;
 }
+
+// ==============responsive mixins==============
+
+@mixin breakPoint($point) {
+    @if $point == break1 {
+        @media (max-width:1010px) { @content;}
+    }
+    @if $point == break2 {
+    @media (max-width:900px) { @content;}
+    }  
+    @if $point == break3 {
+    @media (max-width:850px) { @content;}
+    } 
+    @if $point == break4 {
+    @media (max-width:785px) { @content;}
+    } 
+    @if $point == break5 {
+    @media (max-width:650px) { @content;}
+    } 
+    @if $point == break6 {
+    @media (max-width:500px) { @content;}
+    }
+
+}
