--- a/styles/partials/_gallery.scss
+++ b/styles/partials/_gallery.scss
@@ -56,7 +56,7 @@
                }
             @include breakPoint(break5) {
                   width: 100%;
-                  padding: 0;
+                  padding: 2rem 0;
                   margin: 0;
             }
             img {
