--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -5,6 +5,11 @@
    justify-content: space-between;
    align-items: flex-start;
    padding: 5rem 0;
+   @include breakPoint(break1) {
+     flex-direction: column;
+     justify-content: center;
+    //  width: 100%;
+   }
    @include position(relative, 0, 0, 0, 0);
    .contact, .about, .instagram {
       margin: 0 20px;
@@ -12,6 +17,10 @@
    .contact {
       width: 33.33%;
       font-family: $font-description;
+      @include breakPoint(break1) {
+        width: 100%;
+        text-align: center;
+      }
       .contact__content {
          .contact__content__text {
             padding: 1rem; 
@@ -43,9 +52,17 @@
    }
    .about {
       width: 33.33%;
+      @include breakPoint(break1) {
+        width: 100%;
+        text-align: center;
+      }
    }
    .instagram {
       width: 33.33%;
+      @include breakPoint(break1) {
+        width: 100%;
+        text-align:center;
+      }
       .instagramWrapper {
          .instaGallery {
             display: flex;
@@ -72,14 +89,22 @@
       padding-bottom: 5rem;
       position: absolute;
       top: -50px;
-      right: 0;
+      right: 2rem;
+      @include breakPoint(break6) {
+        position:static;
+        flex-direction: row;
+        padding: 0;
+      }
       .social__list__item {
          // display: block;
          i {
             color: $bg-dark;
-            padding: 3rem 0;
+            padding: 2rem 0;
             &:hover {
                color: $font-accent;
+              //  transform: scale(3);
+              font-size: 3rem;
+               padding: 1rem;
             }
          }
 
@@ -88,9 +113,22 @@
 }
 .ftrnav {
    padding: 5rem;
+   .ftrnav__title {
+     text-align:center;
+     width: 100%;
+     @include breakPoint(break5) {
+       font-size: 2rem;
+       color: $font-accent;
+
+     }
+   }
    .ftrnav__list {
       display: flex;
       justify-content: space-around;
+      @include breakPoint(break5) {
+        flex-direction: column;
+        text-align: center;
+      }
       a {
          font-weight: 700;
          color: $font-dark;
@@ -106,3 +144,4 @@
    color: white;
    text-align: center;
 }
+
